# Alpha-01

./: AutoHotkey.ahk.in  CMakeLists.txt  CTestConfig.cmake  CTestConfigExternal.cmake  CacheXINDEXscript.ahk.in  GTMEnvironment.sh.in  GlobalImport.ahk.in  ImportRG.cmake.in  Initialize.ahk.in  Nightly.sh.in  README  READMEFIRST.txt  RoutineImport.ahk.in  RoutineTest.cmake.in  Routineslist.ahk  WinRoutine.cmake.in  XINDEXscript.exp.in  XINDX51Automatic.m
Reports/Report000/: CMakeLists.txt  HowToWriteTechnicalReport.tex
Source/: program1.m
Testing/: CMakeLists.txt
Utilities/Doxygen/: CMakeLists.txt  doxygen.config.in
